crates/forge/tests/e2e/snapshots/backtrace/main__e2e__backtrace__snap_test_handled_error_not_display@2.20.0.snap
---
source: crates/forge/tests/e2e/backtrace.rs
expression: stdout
---



[PASS] dispatchers_integrationtest::test::test_handle_and_panic (l1_gas: ~0, l1_data_gas: ~288, l2_gas: ~1047600)

stack backtrace:
   in contract 'ErrorHandler':
      0: core::panic_with_const_felt252
         at [..]lib.cairo:360:5
      1: core::panic_with_const_felt252
         at [..]lib.cairo:360:5
      2: dispatchers::error_handler::ErrorHandler::ErrorHandler::catch_panic_and_fail
         at [..]error_handler.cairo:50:21
      3: dispatchers::error_handler::ErrorHandler::__wrapper__ErrorHandler__catch_panic_and_fail
         at [..]error_handler.cairo:27:5

   in test 'dispatchers_integrationtest::test::test_handle_and_panic':
      0: dispatchers_integrationtest::test::test_handle_and_panic__snforge_internal_test_generated
         at [..]tests/test.cairo:28:1
